--- a/lib/package.json
+++ b/lib/package.json
@@ -2,23 +2,20 @@
   "name": "lib",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "bootstrap": "^3.3.7",
-    "grunt": "^1.0.1",
-    "jquery": "^3.1.1",
-    "jshint": "^2.9.4"
-  },
-  "devDependencies": {
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "jshint-stylish": "^2.2.1",
-    "matchdep": "^1.0.1"
-  },
+  "main": "Gruntfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Harper Frankstone",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "bootstrap": "^3.3.7",
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "jquery": "^3.1.1",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1",
+    "matchdep": "^1.0.1"
+  }
 }
