--- a/lib/package.json
+++ b/lib/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^3.3.7",
     "grunt": "^1.0.1",
     "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "jquery": "^3.1.1",
     "jshint": "^2.9.4",
